--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Poppins:wght@400;700&display=swap');
+
+body {
+    font-family: 'Cairo', 'Poppins', sans-serif;
+}
+
 .my-nav {
     background-image: url('https://cdn.vectorstock.com/i/500p/84/65/abstract-white-monochrome-background-vector-32028465.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+
     height: 6rem;
 }
 
@@ -21,6 +25,37 @@
 .first-card .card-tbody{
     font-size: 1.5em;
 }
+.my-img
+{
+    height: 70%;
+   
+    object-fit: fill;
+}
+.title {
+    position: relative;
+    display: inline-block;
+    font-size: 30px;
+    color: #333;
+  }
+  
+  .title::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background: #007bff;
+    left: 0;
+    bottom: -5px;
+    transform: scaleX(1);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+.my-card-text
+{
+    font-size: small;
+    opacity: 0.5;
+}
+  
 
 
 .my-card:hover {
@@ -31,6 +66,6 @@
     font-size: larger;
 }
 footer{
-    background-color:rgb(220, 220, 217);
+    background:linear-gradient( rgb(227, 227, 229), #ededed);
 }
 
